Address review: WARN for 400s, private final entityNamePool, empty grid checks, tests
Agent-Logs-Url: https://github.com/Preponderous-Software/viron/sessions/c38d0021-36ad-4fc0-b9f9-4b904d0861d0

Co-authored-by: dmccoystephenson <21204351+dmccoystephenson@users.noreply.github.com>